user signin/singup dropdown menu was not aligning itself with the window, so it was being cut off. Fixed it to the top right corner

--- a/client/style.css
+++ b/client/style.css
@@ -9,8 +9,14 @@
 
 body {
     background: #eee;
-    color: #666666; }
+    color: #666666;
+}
 
+#login-dropdown-list {
+    position: fixed;
+    left: initial;
+    right: 10px;
+}
 #main {
     position: relative;
 }
